fix horizontal scroll on mobile

--- a/src/components/views/CreationsView.scss
+++ b/src/components/views/CreationsView.scss
@@ -201,6 +201,7 @@
   flex-direction: column;
   max-width: 2000px;
   margin-top: 1em;
+  overflow-x: hidden;
   gap: 1em;
 
   .actions {
